Add Element Body

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -5,8 +5,28 @@
     <link rel="shoutcut icon" href="images/black.jpg">
     <title>Project 1</title>
 
-  </head>
+    <!-- Bootstrap -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
+    <!-- Icons -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 
+    <!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
+
+  </head>
+  <body class="Header">
+    <div>
+      <li><a href="index.html">Home</li>
+      <li><a href="index.html">About</li>
+      <li><a href="index.html">Contact Us</li>
+    </div>
+
+
+
+  </body>
 
 
 
