Add CSS, image header, & Elements

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -6,25 +6,27 @@
     <title>Project 1</title>
 
     <!-- Bootstrap -->
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
+    <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet"> -->
     <!-- Icons -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
     <!-- Fonts -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700"> -->
     <!-- Custom styles -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
 
     <!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
 
   </head>
-  <body class="Header">
+  <body>
     <div>
-      <li><a href="index.html">Home</li>
-      <li><a href="index.html">About</li>
-      <li><a href="index.html">Contact Us</li>
+      <ul class="Header">
+        <li><a href="index.html">HOME</li>
+        <li><a href="index.html">ABOUT</li>
+        <li><a href="index.html">CONTACT US</li>
+      </ul>
     </div>
 
-
+    <img class="image_header" src="images/image_header.jpg" alt="image_header"> </img>
 
   </body>
 
