--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -22,13 +22,11 @@
 
   </head>
   <body>
-    <div>
-      <ul class="Header">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="contact_us.html">CONTACT US</a></li>
-      </ul>
-    </div>
+    <div class="topnav">
+        <a class="active" href="index.html">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="contact_us.html">CONTACT US</a>
+      </div>
 
     <img class="image_header" src="images/image_header.jpg" alt="image_header"></img>
     <br><br>
