--- a/Project_1/contact_us.html
+++ b/Project_1/contact_us.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/contact_us.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shoutcut icon" href="images/black.jpg">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contact Us</title>
-</head>
+
+    <!-- Bootstarp w3 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+  </head>
 <!-- <style>
 input[type=text], select {
   width: 100%;
@@ -39,13 +44,14 @@ div {
 }
 </style> -->
   <body>
-    <div>
-      <ul class="Header">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="index.html#about">ABOUT</a></li>
-        <li><a href="contact_us.html">CONTACT US</a></li>
-      </ul>
-    </div>
+    <div class="topnav" id="myTopnav">
+        <a class="active" href="index.html">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="contact_us.html">CONTACT US</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+   <i class="fa fa-bars"></i>
+ </a>
+      </div>
 
     <img class="image_header" src="images/image_header.jpg" alt="image_header"></img>
     <br><br>
