--- a/Project_1/contact_us.html
+++ b/Project_1/contact_us.html
@@ -46,7 +46,7 @@ div {
   <body>
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">HOME</a>
-        <a href="#about">ABOUT</a>
+        <a href="index.html#about">ABOUT</a>
         <a href="contact_us.html">CONTACT US</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
    <i class="fa fa-bars"></i>
