Fix footer style, hide contacy_us.html

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -73,7 +73,7 @@
 
 
 <div class="footer">
-  <p class="text_footer">copyright©2019 Powered by rifahrldy </p>
+  <h6 class="text_footer">copyright©2019 Powered by rifahrldy </h6>
 </div>
 
 <script>
