--- a/Project_1/contact_us.html
+++ b/Project_1/contact_us.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   </head>
-<style>
+<!-- <style>
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -42,7 +42,7 @@ div {
   background-color: #f2f2f2;
   padding: 20px;
 }
-</style>
+</style> -->
   <body>
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">HOME</a>
