Add all new image

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -27,32 +27,32 @@
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">HOME</a>
         <a href="#about">ABOUT</a>
-        <a href="contact_us.html">CONTACT US</a>
+        <a href="#contact">CONTACT US</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
    <i class="fa fa-bars"></i>
  </a>
       </div>
 
-    <img class="image_header" src="images/image_header.jpg" alt="image_header"></img>
+    <img class="image_header" src="images/15294.jpg" alt="image_header"></img>
     <br><br>
 
     <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <img src="images/image_header.jpg" height= 250 width= 100%></img>
-      <h3 id="column">Column 1</h3>
+      <img src="images/digital_marketing.jpg" height= auto width= 100%></img>
+      <h3 id="column">Digital Marketing</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <img src="images/image_header.jpg" height= 250 width= 100%></img>
-      <h3 id="column">Column 2</h3>
+      <img src="images/social_media.jpg" height= auto width= 100%></img>
+      <h3 id="column">Social Media</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <img src="images/image_header.jpg" height= 250 width= 100%></img>
-      <h3 id="column">Column 3</h3>
+      <img src="images/web_development.jpg" height= auto width= 100%></img>
+      <h3 id="column">Web Deveopment</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
@@ -69,26 +69,43 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div><br><br>
+
+  <div class="footer_contact">
+    <a name="contact"></a>
+    <div>
+      <h5>Contact</h5>
+      <p>0896 8386 5183</p>
+      <p>rifaherlandy@gmail.com</p>
+    </div>
+
+    <div>
+      <ul>
+        <h5>FOLLOW ME</h5>
+          <li><a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/">Linkedin</a></li>
+          <li><a href="https://www.facebook.com/rifa.herlandy">Facebook</a></li>
+          <li><a href="https://twitter.com/rifahrldy">Twitter</a></li>
+          <li><a href="https://www.instagram.com/rherlandy/">Instagram</a></li>
+        </ul>
+
+      </div>
   </div>
 
 
-<div class="footer">
-  <h6 class="text_footer">copyright©2019 Powered by rifahrldy </h6>
-</div>
+  <div class="footer">
+    <h6 class="text_footer">copyright©2019 Powered by rifahrldy </h6>
+  </div>
 
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
+  <script>
+    function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
     x.className += " responsive";
-  } else {
+    } else {
     x.className = "topnav";
-  }
-}
-</script>
+      }
+    }
+  </script>
 
   </body>
-
-
-
 </html>
