try to fix footer

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -7,37 +7,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Project 1</title>
 
-    <!-- Bootstarp w3 -->
+    <!-- Bootstarp -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-
-    <!-- Bootstrap -->
-    <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet"> -->
-    <!-- Icons -->
-    <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
-    <!-- Fonts -->
-    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700"> -->
-    <!-- Custom styles -->
-    <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
-
-    <!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
 
   </head>
   <body>
+
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">HOME</a>
+        <a href="#services">SERVICES</a>
         <a href="#about">ABOUT</a>
         <a href="#contact">CONTACT US</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-   <i class="fa fa-bars"></i>
- </a>
-      </div>
+        <i class="fa fa-bars"></i>
+        </a>
+    </div>
 
     <img class="image_header" src="images/15294.jpg" alt="image_header"></img>
     <br><br>
 
+    <div class="body_quotes">
+      <p>"Word-of-mouth marketing has always been important. Today, it’s more important than ever because of the power of the Internet.”</p>
+      <p>— Joe Pulizzi & Newt Barrett</p>
+    </div>
+    <br><br>
+
+    <div>
+      <a name="services"></a>
     <div class="container">
-  <div class="row">
+      <div class="row">
     <div class="col-sm-4">
       <img src="images/digital_marketing.jpg" height= auto width= 100%></img>
       <h3 id="column">Digital Marketing</h3>
@@ -52,11 +50,12 @@
     </div>
     <div class="col-sm-4">
       <img src="images/web_development.jpg" height= auto width= 100%></img>
-      <h3 id="column">Web Deveopment</h3>
+      <h3 id="column">Web Development</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
   </div>
+</div>
 </div>
 <br><br>
 
@@ -82,14 +81,22 @@
     <div>
       <ul>
         <h5>FOLLOW ME</h5>
-          <li><a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/">Linkedin</a></li>
-          <li><a href="https://www.facebook.com/rifa.herlandy">Facebook</a></li>
-          <li><a href="https://twitter.com/rifahrldy">Twitter</a></li>
-          <li><a href="https://www.instagram.com/rherlandy/">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/" target="blank">Linkedin</a></li>
+          <li><a href="https://www.facebook.com/rifa.herlandy" target="blank">Facebook</a></li>
+          <li><a href="https://twitter.com/rifahrldy" target="blank">Twitter</a></li>
+          <li><a href="https://www.instagram.com/rherlandy/" target="blank">Instagram</a></li>
         </ul>
 
       </div>
   </div>
+
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col bg-success">Lorem ipsum dolor sit amet, cibo sensibus interesset no sit. Et dolor possim volutpat qui. No malis tollit iriure eam, et vel tale zril blandit, rebum vidisse nostrum qui eu. No nostrud dolorem legendos mea, ea eum mucius oporteat platonem.Eam an case scribentur, ei clita causae cum, alia debet eu vel.</div>
+    <div class="col bg-warning">.col</div>
+    <div class="col bg-success">.col</div>
+  </div>
+</div>
 
 
   <div class="footer">
