Remove <ul> & <li> in Follow Me

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -72,31 +72,30 @@
 
   <div class="footer_contact">
     <a name="contact"></a>
-    <div>
+    <div class="footer_contact_text">
       <h5>Contact</h5>
       <p>0896 8386 5183</p>
       <p>rifaherlandy@gmail.com</p>
     </div>
 
-    <div>
-      <ul>
+    <div class="footer_follow_text">
         <h5>FOLLOW ME</h5>
-          <li><a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/" target="blank">Linkedin</a></li>
-          <li><a href="https://www.facebook.com/rifa.herlandy" target="blank">Facebook</a></li>
-          <li><a href="https://twitter.com/rifahrldy" target="blank">Twitter</a></li>
-          <li><a href="https://www.instagram.com/rherlandy/" target="blank">Instagram</a></li>
-        </ul>
+          <a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/" target="blank">Linkedin</a>
+          <a href="https://www.facebook.com/rifa.herlandy" target="blank">Facebook</a>
+          <a href="https://twitter.com/rifahrldy" target="blank">Twitter</a>
+          <a href="https://www.instagram.com/rherlandy/" target="blank">Instagram</a>
+        
 
       </div>
   </div>
 
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
   <div class="row">
     <div class="col bg-success">Lorem ipsum dolor sit amet, cibo sensibus interesset no sit. Et dolor possim volutpat qui. No malis tollit iriure eam, et vel tale zril blandit, rebum vidisse nostrum qui eu. No nostrud dolorem legendos mea, ea eum mucius oporteat platonem.Eam an case scribentur, ei clita causae cum, alia debet eu vel.</div>
     <div class="col bg-warning">.col</div>
     <div class="col bg-success">.col</div>
   </div>
-</div>
+</div> -->
 
 
   <div class="footer">
