--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -70,7 +70,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div><br><br>
 
-  <div class="footer_contact">
+  <!-- <div class="footer_contact">
     <a name="contact"></a>
     <div class="footer_contact_text">
       <h5>Contact</h5>
@@ -84,18 +84,26 @@
           <a href="https://www.facebook.com/rifa.herlandy" target="blank">Facebook</a>
           <a href="https://twitter.com/rifahrldy" target="blank">Twitter</a>
           <a href="https://www.instagram.com/rherlandy/" target="blank">Instagram</a>
-        
-
-      </div>
+        </div>
+  </div> -->
+  <div>
+    <a name="contact"></a>
+  <div class="grid-container">
+<div>
+  <h5>Contact</h5>
+  <p>0896 8386 5183</p>
+  <p>rifaherlandy@gmail.com</p>
+</div>
+<div>
+  <h5>FOLLOW ME</h5>
+    <a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/" class="fa fa-linkedin" target="blank"></a>
+    <a href="https://www.facebook.com/rifa.herlandy" class="fa fa-facebook" target="blank"></a>
+    <a href="https://twitter.com/rifahrldy" class="fa fa-twitter" target="blank"></a>
+    <a href="https://www.instagram.com/rherlandy/" class="fa fa-instagram" target="blank"></a>
   </div>
+</div>
 
-  <!-- <div class="container-fluid">
-  <div class="row">
-    <div class="col bg-success">Lorem ipsum dolor sit amet, cibo sensibus interesset no sit. Et dolor possim volutpat qui. No malis tollit iriure eam, et vel tale zril blandit, rebum vidisse nostrum qui eu. No nostrud dolorem legendos mea, ea eum mucius oporteat platonem.Eam an case scribentur, ei clita causae cum, alia debet eu vel.</div>
-    <div class="col bg-warning">.col</div>
-    <div class="col bg-success">.col</div>
-  </div>
-</div> -->
+</div>
 
 
   <div class="footer">
