Add element h2 services

--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -30,27 +30,29 @@
       <p>"Word-of-mouth marketing has always been important. Today, it’s more important than ever because of the power of the Internet.”</p>
       <p>— Joe Pulizzi & Newt Barrett</p>
     </div>
-    <br><br>
+    <br>
 
+    <h2>Services</h2>
+    <br>
     <div>
       <a name="services"></a>
     <div class="container">
       <div class="row">
     <div class="col-sm-4">
       <img src="images/digital_marketing.jpg" height= auto width= 100%></img>
-      <h3 id="column">Digital Marketing</h3>
+      <h4 id="column">Digital Marketing</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <img src="images/social_media.jpg" height= auto width= 100%></img>
-      <h3 id="column">Social Media</h3>
+      <h4 id="column">Social Media</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <img src="images/web_development.jpg" height= auto width= 100%></img>
-      <h3 id="column">Web Development</h3>
+      <h4 id="column">Web Development</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
