--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -32,11 +32,13 @@
     </div>
     <br>
 
+    <div>
+    <a name="services"></a>
     <h2>Services</h2>
+  </div>
     <br>
     <div>
-      <a name="services"></a>
-    <div class="container">
+      <div class="container">
       <div class="row">
     <div class="col-sm-4">
       <img src="images/digital_marketing.jpg" height= auto width= 100%></img>
