--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -98,7 +99,7 @@
   <p>0896 8386 5183</p>
   <p>rifaherlandy@gmail.com</p>
 </div>
-<div>
+<div >
   <h5>FOLLOW ME</h5>
     <a href="https://www.linkedin.com/in/rifa-herlandy-b29a9366/" class="fa fa-linkedin" target="blank"></a>
     <a href="https://www.facebook.com/rifa.herlandy" class="fa fa-facebook" target="blank"></a>
